[package]
name = "gaps_rust"
version = "0.1.0"
authors = ["Niklas Birth <birth@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.2" }
stopwatch = "0.0.7"
needletail = "0.3.2"
smallvec = "1.0.0"