[package]
name = "gaps_rs"
version = "0.1.0"
authors = ["Niklas Birth <birth@posteo.de>"]
edition = "2018"
default-run = "gaps"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
stopwatch = "0.0.7"
needletail = "0.3.2"
smallvec = "1.8.0"
rand = "0.8.5"
rayon = "1.5.3"
indicatif = { version = "0.16.2", features = ["rayon"] }

[profile.release]
debug = true